[package]
name = "qywka_os"
version = "0.1.0"
authors = ["Author Name <author@example.com>"]
edition = "2024"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
